--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,8 @@ html {
   font-size: 62.5%; }
 
 body {
-  font-family: 'Roboto', sans-serif; }
+  font-family: 'Roboto', sans-serif;
+  background-color: #f2f2f2; }
 
 .card__button--orange {
   background-color: #e38826;
