--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,5 @@
+@import 'colors.scss';
+
 * {
     padding: 0;
     margin: 0;
@@ -10,6 +12,8 @@ html {
 
 body {
     font-family: 'Roboto', sans-serif;
+    background-color: $light-gray;
 }
 
 @import 'button.scss';
+@import 'card.scss';
