--- a/css/button.css
+++ b/css/button.css
@@ -1,23 +1,47 @@
 .card__button--orange {
-  background-color: #e38826;
   transition-duration: 100ms;
   transition-timing-function: ease-in;
-  background-color: white; }
+  background-color: white;
+  padding: 15px 35px;
+  border-radius: 27px;
+  text-decoration: none;
+  color: #e38826;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border: 2px solid white;
+  font-family: "Lexend Deca", sans-serif; }
   .card__button--orange:hover, .card__button--orange:focus {
-    color: #e38826; }
+    background-color: #e38826;
+    color: white; }
 
-.card__button--cyan {
-  background-color: #006970;
+.card__button--dark-cyan {
   transition-duration: 100ms;
   transition-timing-function: ease-in;
-  background-color: white; }
-  .card__button--cyan:hover, .card__button--cyan:focus {
-    color: #006970; }
+  background-color: white;
+  padding: 15px 35px;
+  border-radius: 27px;
+  text-decoration: none;
+  color: #006970;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border: 2px solid white;
+  font-family: "Lexend Deca", sans-serif; }
+  .card__button--dark-cyan:hover, .card__button--dark-cyan:focus {
+    background-color: #006970;
+    color: white; }
 
 .card__button--darker-cyan {
-  background-color: #004241;
   transition-duration: 100ms;
   transition-timing-function: ease-in;
-  background-color: white; }
+  background-color: white;
+  padding: 15px 35px;
+  border-radius: 27px;
+  text-decoration: none;
+  color: #004241;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border: 2px solid white;
+  font-family: "Lexend Deca", sans-serif; }
   .card__button--darker-cyan:hover, .card__button--darker-cyan:focus {
-    color: #004241; }
+    background-color: #004241;
+    color: white; }
