--- a/css/card.css
+++ b/css/card.css
@@ -11,13 +11,15 @@
     font-size: 40px;
     text-transform: uppercase;
     letter-spacing: 1px;
-    margin: 30px 0px; }
+    margin: 30px 0px;
+    opacity: 0.9; }
   .card p {
     line-height: 30px;
     font-family: "Lexend Deca", sans-serif;
     margin-bottom: 100px;
     opacity: 1;
-    font-size: 15px; }
+    font-size: 15px;
+    opacity: 0.9; }
   .card:nth-child(1) {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px; }
