--- a/sass/card.scss
+++ b/sass/card.scss
@@ -15,6 +15,7 @@
         text-transform: uppercase;
         letter-spacing: 1px;
         margin: 30px 0px;
+        opacity: 0.9;
     }
     p {
         line-height: 30px;
@@ -22,6 +23,7 @@
         margin-bottom: 100px;
         opacity: 1;
         font-size: 15px;
+        opacity: 0.9;
     }
 
     &:nth-child(1) {
